@@ -189,8 +189,6 @@ Option -f sometimes fails to trace some children.
 .LP
 It only works on Linux and in a small subset of architectures.
 .LP
-Only ELF32 binaries are supported.
-.LP
 Calls to dlopen()ed libraries will not be traced.
 .PP
 If you would like to report a bug, send a message to the mailing list
